--- a/ecolab2_api/py/templates/index.html
+++ b/ecolab2_api/py/templates/index.html
@@ -10,12 +10,16 @@
 <style>
     .container {
         position: relative;
+        
+    }
+    @media screen { 
+        
     }
 
     .E2C3, .E2C2, .E2C1 {
         width: 5%;
         height: auto;
-        
+        background-color: blue;
         margin: 20px;
         padding: 20px;
         position: absolute;
