--- a/ecolab2_api/pyResponsive/templates/index.html
+++ b/ecolab2_api/pyResponsive/templates/index.html
@@ -8,15 +8,16 @@
     <title>Document</title>
     <style>
         .flex-container {
-            display: flex;
             flex-flow: row wrap;
             justify-content: space-around;
             padding: 0;
             margin: 0;
             list-style: none;
-            background-color: blue;
             height: 50vh;
             
+        }
+        .flex-container > div{
+            text-align: center;
         }
 
         .flex-item {
@@ -26,27 +27,99 @@
             font-weight: bold;
             font-size: 3em;
             text-align: center;
+            
         }
 
         
-        .E1 , .E3,  .E5 {
+      
+      
+        .E5{
             padding: 5px;
-            width: 200px;
-            height: 150px;
+            width: 250px;
+            height: 230px;
             background-color: lightblue;
+           
         }
-        
+       
+        .E501{
+            padding: 5px;
+            width: 100px;
+            height: 50px;
+            background-color:  rgb(211, 70, 70);
+
+        }
+        .E5C1{
+            padding: 5px;
+            width: 100px;
+            height: 100px;
+            background-color: rgb(22, 216, 174);
+            margin-top: -222px;
+            margin-left: 6px;
+           
+        }
+        .E5C2{
+            padding: 5px;
+            width: 100px;
+            height: 100px;
+            background-color: rgb(22, 216, 174);
+            margin-top: 12px;
+            margin-left: 6px;
+        }
+
+        .E503{
+            padding: 5px;
+            width: 100px;
+            height: 50px;
+            background-color:  rgb(211, 70, 70);
+            margin-top: -46px;
+            margin-left: 145px;
+        }
+        .E5C3{
+            padding: 5px;
+            width: 100px;
+            height: 100px;
+            background-color: rgb(22, 216, 174);
+            margin-top: -102px;
+            margin-left: 145px;
+        }
+         
+        .BLOCK-E5{
+           
+        }
+        .E5T{
+            background-color:  rgb(0, 106, 168);
+            margin-left: -0px;
+            padding: 5px;
+            width: 150px;
+            height: 70px;
+        }
+        .E502{
+            padding: 5px;
+            width: 100px;
+            height: 50px;
+            background-color: rgb(211, 70, 70);
+            margin-top: 22px;
+            margin-left: 1px;
+        }
+    
+
+
+
+
+
+
+
 
         .L1{
             width: 100%;
-            background-color: aqua;
             padding: 50px;
             text-align: center;
         }
         .L1 > div  {
-        display:inline-block;
-        margin: 50px;
-       
+            display: inline-block;
+            
+            margin: 50px;
+            overflow: hidden;
         }       
         .BLOCK-EC{
           
@@ -54,9 +127,10 @@
         .EC {
             padding: 5px;
             width: 250px;
-            height: 420px;
-            background-color: lightblue;
-            padding-top: 24vh;
+            height: 465px;
+            background-color: rgb(101, 221, 117);
+           
+            
         }
         .E2{
             padding: 5px;
@@ -79,19 +153,22 @@
             padding: 5px;
             width: 150px;
             height: 70px;
-            background-color: rgb(0, 168, 25);
+            background-color: rgb(0, 106, 168);
         }
         .E4O1{
             padding: 5px;
             width: 100px;
             height: 50px;
-            background-color: rgb(0, 168, 25);
+            background-color:  rgb(211, 70, 70);
         }
+
+     
+        
         .E4O2{
             padding: 5px;
             width: 100px;
             height: 50px;
-            background-color: rgb(203, 216, 22);
+            background-color:  rgb(211, 70, 70);
             margin-top: -50px;
             margin-left: 150px;
         }
@@ -99,23 +176,24 @@
             padding: 5px;
             width: 100px;
             height: 50px;
-            background-color: rgb(203, 216, 22);
-            margin-top: 40px;
+            background-color:  rgb(211, 70, 70);
+            margin-top: -42px;
             margin-left: 150px;
         }
         .E4C3{
             padding: 5px;
             width: 100px;
             height: 100px;
-            background-color: rgb(22, 35, 216);
+            background-color: rgb(22, 216, 174);
             margin-top: -224px;
             margin-left: 6px;
+            
         }
         .E4C2{
             padding: 5px;
             width: 100px;
             height: 100px;
-            background-color: rgb(22, 35, 216);
+            background-color:rgb(22, 216, 174);
             margin-top: -100px;
             margin-left: 58%;
         }
@@ -127,7 +205,30 @@
             margin-top: 15px;
             margin-left: 58%;
         }
+        .label1{
+            
 
+            background-color: rgb(22, 177, 216);
+            margin-top: 28px;
+            margin-left: 18px;
+            width: 100px;
+        }
+        .label2{
+            background-color:  rgb(22, 177, 216);
+            margin-top: -30px;
+            margin-left: 120px;
+            width: 100px;
+        }
+        .message{
+           padding-top: 20px;
+            font-size: 7px;
+            margin: -20px;
+            
+            
+        }
+        .message p {
+    line-height: 1;
+}
     </style>
 </head>
 <body>
@@ -137,46 +238,101 @@
         <div class="L1">
 
         <div class="BLOCK-EC">
-        <li class="flex-item EC">1</li>
+        <li class="flex-item EC"></li>
+        <div class="p"><p>Ecocube</p></div>
         </div>
 
         <div class="BLOCK-E4">
         <li class="flex-item E4T"></li>
         <li class="flex-item E4O1"></li>
         <li class="flex-item E4O2"></li>
-        <li class="flex-item E4">2</li>
+        <li class="flex-item E4"></li>
         <li class="flex-item E4C3"></li>
         <li class="flex-item E4C2"></li>
         <li class="flex-item E4C1"></li>
+        <p class="label1"> Ecolab 4</p>
         <li class="flex-item E4O3"></li>
+        
         </div>
 
         <div class="BLOCK-E2">
         <li class="flex-item E4T"></li>
         <li class="flex-item E4O1"></li>
         <li class="flex-item E4O2"></li>
-        <li class="flex-item E2">3</li>
-        <li class="flex-item E4C3"></li>
-        <li class="flex-item E4C2"></li>
-        <li class="flex-item E4C1"></li>
+        <li class="flex-item E2"></li>
+        <li class="flex-item E4C3">
+            <div class="message" id="message3">
+                <h5>{{ info['ecolab_2']['Cellule_3']['name'] }}</h5>
+                <p>Temperature Reprise : {{ info['ecolab_2']['Cellule_3']['params']['temperature_reprise'] }}</p>
+                <p>Temperature Eau Pluie : {{ info['ecolab_2']['Cellule_3']['params']['temperature_eau_pluie'] }}</p>
+                <p>Temperature Consigne : {{ info['ecolab_2']['Cellule_3']['params']['temperature_consigne'] }}</p>
+            </div>
+        </li>
+        <li class="flex-item E4C2">
+            <div class="message" id="message2">
+                <h5>{{ info['ecolab_2']['Cellule_2']['name'] }}</h5>
+                <p>Temp Reprise : {{ info['ecolab_2']['Cellule_2']['params']['temperature_reprise'] }}</p>
+                <p>Temperature Eau Pluie : {{ info['ecolab_2']['Cellule_2']['params']['temperature_eau_pluie'] }}</p>
+                <p>Temperature Consigne : {{ info['ecolab_2']['Cellule_2']['params']['temperature_consigne'] }}</p>
+            </div>
+        </li>
+        <li class="flex-item E4C1"><div class="message" id="message1">
+            <h5>{{ info['ecolab_2']['Cellule_1']['name'] }}</h5>
+            <p>Temp Reprise : {{ info['ecolab_2']['Cellule_1']['params']['temperature_reprise'] }}</p>
+            <p>Temperature Eau Pluie : {{ info['ecolab_2']['Cellule_1']['params']['temperature_eau_pluie'] }}</p>
+            <p>Temperature Consigne : {{ info['ecolab_2']['Cellule_1']['params']['temperature_consigne'] }}</p>
+        </div></li>
+        <p class="label1">Ecolab 2</p>
         <li class="flex-item E4O3"></li>
+       
         </div>
 
-        </div>
+        
 
 
-        <div class="L2">
-        <div class="E5">
+        
+        <div class="BLOCK-E5">
+            
         <li class="flex-item E501"></li>
-        <li class="flex-item E5">4</li>
-        <li class="flex-item E4C1"></li>
-        <li class="flex-item E4C2"></li>
-        <li class="flex-item E4C3"></li>
-        <li class="flex-item E5T"></li>
+        <p class="label2">Ecolab 5</p>
+        <li class="flex-item E5"></li>
+        <li class="flex-item E5C1"></li>
+        <li class="flex-item E5C2"></li>
+        <li class="flex-item E5C3"></li>
+        <li class="flex-item E502"></li>
+        <li class="flex-item E503"></li>
+        <li class="flex-item E5T"> </li>
         </div>
-        <li class="flex-item E3">5</li>
-        <li class="flex-item E1">6</li>
+        <div class="BLOCK-E5">
+            
+            
+            <li class="flex-item E501"></li>
+            <p class="label2">Ecolab 3</p>
+            <li class="flex-item E5"></li>
+            <li class="flex-item E5C1"></li>
+            <li class="flex-item E5C2"></li>
+            <li class="flex-item E5C3"></li>
+            <li class="flex-item E502"></li>
+            <li class="flex-item E503"></li>
+            <li class="flex-item E5T"> </li>
+            </div>
+            <div class="BLOCK-E5">
+                
+                <li class="flex-item E501"></li>
+                <p class="label2">Ecolab 1</p>
+                <li class="flex-item E5"></li>
+                <li class="flex-item E5C1">
+                    
+                </li>
+                <li class="flex-item E5C2"></li>
+                <li class="flex-item E5C3"></li>
+                <li class="flex-item E502"></li>
+                <li class="flex-item E503"></li>
+                <li class="flex-item E5T"> </li>
+                </div>
+           
         </div>
+        
     </ul>
 
 </body>
