--- a/ecolab2_api/pyResponsive/templates/connexion.html
+++ b/ecolab2_api/pyResponsive/templates/connexion.html
@@ -28,7 +28,7 @@
 <body>
     <div class="form mx-auto my-5">
         
-        <form action="http://localhost:4000/traitement" method="post">
+        <form action="http://{{ ip }}:{{ port }}/traitement" method="post">
 
             
         <div class="form-group">
