--- a/ecolab2_api/pyResponsive/templates/connexion.html
+++ b/ecolab2_api/pyResponsive/templates/connexion.html
@@ -5,24 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/static/connexion.css">
     <title>Document</title>
     
 </head>
 
 <style>
-    .form {
-        width: 40%;
-    }
-
-    .body {
-        text-align: center;
-    }
-    .sub {
-        margin-top: 5%;
-    }
-    .form-label-space , .form-input-space{
-        margin-bottom: 10px; /* Ajustez la marge inférieure selon vos besoins */
-    }
+   
 </style>
 
 <body>
