--- a/ecolab2_api/pyResponsiveImg/templates/index.html
+++ b/ecolab2_api/pyResponsiveImg/templates/index.html
@@ -10,11 +10,11 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+           <a href=""> <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
            data-bs-target="#navbarCollapse" aria-controls="navbarCollapse"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
+          </button> </a>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
               <li class="nav-item">
@@ -54,126 +54,150 @@
         <img class="ecolabs" src="/static/images/DJI_0884.JPG" alt="">
         
         <div class="cell E1C3" id="E1C3">
-            <button class="btnE1C3">E1C3</button>
+           <a href="/E1C3"><button class="btnE1C3">E1C3</button> </a>
             <div class="E1C2">
-            <button class="btnE1C2">E1C2</button>
+             <a href="/E1C2"> <button class="btnE1C2">E1C2</button> </a>
             </div>
             <div class="E1C1">
-            <button class="btnE1C1">E1C1</button>
+             <a href="/E1C1"> <button class="btnE1C1" >E1C1</button> </a>
             </div>
             <div class="E3C3">
-                <button class="btnE3C3">E3C3</button>
+                 <a href="/E3C3"> <button class="btnE3C3"  >E3C3</button> </a>
             </div>
             <div class="E3C2">
-                <button class="btnE3C2">E3C2</button>
+                 <a href="/E3C2"> <button class="btnE3C2" >E3C2</button> </a>
             </div>
             <div class="E3C1">
-                <button class="btnE3C1">E3C1</button>
+                 <a href="/E3C1"> <button class="btnE3C1"  >E3C1</button> </a>
             </div>
             <div class="E5C3">
-                <button class="btnE5C3">E5C3</button>
+                 <a href="/E5C3"> <button class="btnE5C3"  >E5C3</button> </a>
             </div>
             <div class="E5C2">
-                <button class="btnE5C2">E5C2</button>
+                 <a href="/E5C2"> <button class="btnE5C2"  >E5C2</button> </a>
             </div>
             <div class="E5C1">
-                <button class="btnE5C1">E5C1</button>
+                 <a href="/E5C1"> <button class="btnE5C1" >E5C1</button> </a>
             </div>
             <div class="E2C1">
-                <button class="btnE2C1">E2C1</button>
+                 <a href="/E2C1"> <button class="btnE2C1" >E2C1</button> </a>
             </div>
             <div class="E2C2">
-                <button class="btnE2C2">E2C2</button>
+                 <a href="/E2C2"> <button class="btnE2C2" >E2C2</button> </a>
             </div>
             <div class="E2C3">
-                <button class="btnE2C3">E2C3</button>
+                 <a href="/E2C3"> <button class="btnE2C3">E2C3</button> </a>
             </div>
             <div class="E4C1">
-                <button class="btnE4C1">E4C1</button>
+                 <a href="/E4C1"> <button class="btnE4C1">E4C1</button> </a>
             </div>
             <div class="E4C2">
-                <button class="btnE4C2">E4C2</button>
+                 <a href="/E4C2"> <button class="btnE4C2" >E4C2</button> </a>
             </div>
             <div class="E4C3">
-                <button class="btnE4C3">E4C3</button>
+                 <a href="/E4C3"> <button class="btnE4C3">E4C3</button> </a>
             </div>
             <div class="E6C1">
-                <button class="btnE6C1">E6C1</button>
+                 <a href="/E6C1"> <button class="btnE6C1" >E6C1</button> </a>
             </div>
             <div class="E6C2">
-                <button class="btnE6C2">E6C2</button>
+                 <a href="/E6C2"> <button class="btnE6C2" >E6C2</button> </a>
             </div>
             <div class="E6C3">
-                <button class="btnE6C3">E6C3</button>
+                 <a href="/E6C3"> <button class="btnE6C3" >E6C3</button> </a>
             </div>
 
             </div>
             <img class="ecolabs_mobil" src="/static/images/imgmobil2.png" alt="">
            
             <div class="cell E1C3_mobil">
-            <button class="btnE1C3_mobil">E1C3</button>
+             <a href="/E1C3"> <button class="btnE1C3_mobil" >E1C3</button> </a>
             <div class="E1C2_mobil">
-            <button class="btnE1C2_mobil">E1C2</button>
+             <a href="/E1C2"> <button class="btnE1C2_mobil" >E1C2</button> </a>
             </div>
             <div class="E1C1_mobil">
-            <button class="btnE1C1_mobil">E1C1</button>
+             <a href="/E1C1"> <button class="btnE1C1_mobil">E1C1</button> </a>
             </div>
 
             <div class="E2C1_mobil">
-            <button class="btnE2C1_mobil">E2C1</button>
+             <a href="/E2C1"> <button class="btnE2C1_mobil">E2C1</button> </a>
             </div>
             <div class="E2C2_mobil">
-            <button class="btnE2C2_mobil">E2C2</button>
+             <a href="/E2C2"> <button class="btnE2C2_mobil">E2C2</button> </a>
             </div>
             <div class="E2C3_mobil">
-            <button class="btnE2C3_mobil">E2C3</button>
+             <a href="/E2C3"> <button class="btnE2C3_mobil" >E2C3</button> </a>
             </div>
 
             <div class="E3C3_mobil">
-            <button class="btnE3C3_mobil">E3C3</button>
+             <a href="/E3C3"> <button class="btnE3C3_mobil" >E3C3</button> </a>
             </div>
             <div class="E3C2_mobil">
-            <button class="btnE3C2_mobil">E3C2</button>
+             <a href="/E3C2"> <button class="btnE3C2_mobil" >E3C2</button> </a>
             </div>
             <div class="E3C1_mobil">
-            <button class="btnE3C1_mobil">E3C1</button>
+             <a href="/E3C1"> <button class="btnE3C1_mobil" >E3C1</button> </a>
             </div>
 
             <div class="E4C1_mobil">
-            <button class="btnE4C1_mobil">E4C1</button>
+             <a href="/E4C1"> <button class="btnE4C1_mobil" >E4C1</button> </a>
             </div>
             <div class="E4C2_mobil">
-            <button class="btnE4C2_mobil">E4C2</button>
+             <a href="/E4C2"> <button class="btnE4C2_mobil" >E4C2</button> </a>
             </div>
             <div class="E4C3_mobil">
-            <button class="btnE4C3_mobil">E4C3</button>
+             <a href="/E4C3"> <button class="btnE4C3_mobil" >E4C3</button> </a>
             </div>
 
             <div class="E5C3_mobil">
-            <button class="btnE5C3_mobil">E5C3</button>
+             <a href="/E5C3"> <button class="btnE5C3_mobil" >E5C3</button> </a>
             </div>
             <div class="E5C2_mobil">
-            <button class="btnE5C2_mobil">E5C2</button>
+             <a href="/E5C2"> <button class="btnE5C2_mobil">E5C2</button> </a>
             </div>
             <div class="E5C1_mobil">
-            <button class="btnE5C1_mobil">E5C1</button>
+             <a href="/E5C1"> <button class="btnE5C1_mobil" >E5C1</button> </a>
             </div>
           
             <div class="E6C1_mobil">
-            <button class="btnE6C1_mobil">E6C1</button>
+             <a href="/E6C1"> <button class="btnE6C1_mobil" >E6C1</button> </a>
             </div>
             <div class="E6C2_mobil">
-            <button class="btnE6C2_mobil">E6C2</button>
+             <a href="/E6C1"> <button class="btnE6C2_mobil" >E6C2</button> </a>
             </div>
             <div class="E6C3_mobil">
-            <button class="btnE6C3_mobil">E6C3</button>
+             <a href="/E6C3"> <button class="btnE6C3_mobil" >E6C3</button> </a>
             </div>
 
             </div>
-
-            <div class="params">
-
+            {%if detail=="yes" %}
+            <div class="params" >
+               <a href="{{ url_for('index') }}" > <button  class="btn-close close" aria-label="Close"></button></a>
+                
+                <h1 class="titre-historique">Détail de <span id="nom_cellule"></span></h1>
+                <table class="table">
+                    <tr>
+                    <td>Temperature Reprise</td>
+                    <td>{{ info['params']['temperature_reprise'] | round }}</td>
+                    </tr>
+                    <tr>
+                    <td>Temperature Eau Pluie</td>
+                    <td>{{ info['params']['temperature_eau_pluie']| round  }}</td>
+                    </tr>
+                    <tr>
+                    <td>Temperature Consigne </td>
+                    <td>{{ info['params']['temperature_consigne']| round }}</td>
+                    </tr>
+                   
+                     
+                  </table>
+                
             </div>
+            {% endif %}
+            <script>
+
+               
+            </script>
 
     <script src="/static/responsive.js"> </script>
 </body>
