--- a/ecolab2_api/pyResponsiveImg/static/style.css
+++ b/ecolab2_api/pyResponsiveImg/static/style.css
@@ -203,18 +203,22 @@
 }
 .params{
     background-color: rgb(255, 255, 255);
-    padding-top: 15%;
-    padding-bottom: 15%;
+   padding-top: 2%;
+   padding-bottom: 2%;
 
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 5%;
+    padding-right: 5%;
     position: absolute;
     top: 10%;
     left:3%;
+   
    
 }
 body{
     width: 100%;
     height: 100%;
     background-color: black;
+}
+.close{
+    margin-top: -20%;
 }
