--- a/ecolab2_api/pyResponsiveImg/templates/index.html
+++ b/ecolab2_api/pyResponsiveImg/templates/index.html
@@ -195,7 +195,8 @@
             </div>
             {% endif %}
             <script>
-                 const ecolabs = document.querySelector('.ecolabs');
+     // Autor: Deva
+     const ecolabs = document.querySelector('.ecolabs');
     const ecolabs_mobil = document.querySelector('.ecolabs_mobil')
     const E1C3 = document.querySelector('#E1C3');
     const E1C3_mobil = document.querySelector('.E1C3_mobil')
