--- a/templates/allUsers.html
+++ b/templates/allUsers.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/static/style.css">
-    <link rel="icon" href="/static/images/CNRSlogo.svg" type="image/x-icon">
+    <link rel="icon" href="/ImgResponsive/static/images/CNRSlogo.svg" type="image/x-icon">
     <title>Liste des utilisateurs</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
     <table>
         <div class="historique">
             <table class="table">
-                <h2 class="titre-historique">Les Utilisateurs</h2> 
+                <h2 class="titre-historique">Les Utilisateurs</h2>    
                 <tr>
                     <th>Nom</th>
                     <th>Role</th>
@@ -38,6 +38,6 @@
                 {% endfor %}
             </table>
           </div>
-    </table>
+    </table>    
 </body>
 </html>
