--- a/templates/editExperience.html
+++ b/templates/editExperience.html
@@ -19,7 +19,7 @@
         </div>
         <br>
         <div class="form-group">
-          <label >Date de Debut</label>
+          <label >Date de Début</label>
           <input type="date" name="date_debut" class="form-control" value="{{ experience.date_debut }}">
         </div>
         <br>
@@ -41,7 +41,7 @@
         <button type="submit" class="btn btn-primary">Confirmer</button>
         <form action="{{url_for('experiences')}}" method="POST">
           <button type="submit" class="btn btn-primary">Retour</button>
-        </form>  
+        </form>
       </form>
     </div>
 </body>
